--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <i class="fas fa-search"></i>
             <span class="material-icons">close</span>
         </div>
-        <p class="info-text">Type a word and Press Enter to get the meaning, example, pronuction and synonymsof that typed word</p>
+        <p class="info-text">Type a word and press Enter to see its meaning, pronunciation, example, and synonyms.</p>
         <ul>
             <li class="word">
                 <div class="details">
